--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   <scm>
     <connection>scm:git:https://github.com/cotiviti/${project.artifactId}</connection>
     <developerConnection>scm:git:git@github.com:cotiviti/${project.artifactId}.git</developerConnection>
-    <url>https://github.com/cotiviti/${project.artifactId}/tree/master</url>
+    <url>https://github.com/cotiviti/${project.artifactId}/blob/${github.branch}</url>
   </scm>
   <distributionManagement>
     <snapshotRepository>
@@ -56,6 +56,7 @@
   <properties>
     <cotiviti.site.view.url>https://artifacts.cotiviti.io/repository/sites/${project.groupId}/${project.artifactId}/${project.version}</cotiviti.site.view.url>
     <gitlog.maven.plugin.version>1.13.7</gitlog.maven.plugin.version>
+    <github.branch>develop</github.branch>
     <maven.changelog.plugin.version>2.3</maven.changelog.plugin.version>
     <maven.changes.plugin.version>2.12.1</maven.changes.plugin.version>
     <maven.project.info.plugin.version>2.9</maven.project.info.plugin.version>
@@ -145,7 +146,16 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
         <version>${maven.changes.plugin.version}</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>github-report</report>
+              <report>changes-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
         <configuration>
+          <includeOpenIssues>true</includeOpenIssues>
           <onlyMilestoneIssues>false</onlyMilestoneIssues>
           <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
           <columnNames>Type,Key,Summary,Assignee,Status,Fix Version</columnNames>
