--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,27 @@
       <url>dav:${cotiviti.site.view.url}</url>
     </site>
   </distributionManagement>
+   <issueManagement>
+    <url>https://github.com/cotiviti/cotiviti-core-license/issues</url>
+    <system>GitHub</system>
+  </issueManagement>
+  <developers>
+    <developer>
+      <id>admin</id>
+      <email>admin@cotiviti.io</email>
+      <roles>
+        <role>admin</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>mykelalvis</id>
+      <email>Mykel.Alvis@cotiviti.io</email>
+      <roles>
+        <role>Monkey Wrangler</role>
+      </roles>
+      <timezone>Central</timezone>
+    </developer>
+  </developers>
   <properties>
     <cotiviti.site.view.url>https://artifacts.cotiviti.io/repository/sites/${project.groupId}/${project.artifactId}/${project.version}</cotiviti.site.view.url>
     <gitlog.maven.plugin.version>1.13.7</gitlog.maven.plugin.version>
@@ -158,7 +179,6 @@
           <includeOpenIssues>true</includeOpenIssues>
           <onlyMilestoneIssues>false</onlyMilestoneIssues>
           <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
-          <columnNames>Type,Key,Summary,Assignee,Status,Fix Version</columnNames>
         </configuration>
       </plugin>
     </plugins>
