--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,11 @@
     constitutes acknowledgement of and consent to this notice
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.cotiviti</groupId>
   <artifactId>cotiviti-core-license</artifactId>
-  <version>2-SNAPSHOT</version>
+  <version>2</version>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
   <description>Cotiviti License for Mycila Maven License Plugin - This is the text for the internal license plugin</description>
@@ -39,7 +38,7 @@
     <connection>scm:git:https://github.com/cotiviti/${project.artifactId}</connection>
     <developerConnection>scm:git:git@github.com:cotiviti/${project.artifactId}.git</developerConnection>
     <url>https://github.com/cotiviti/${project.artifactId}/blob/${cotiviti.github.branch}</url>
-    <tag>HEAD</tag>
+    <tag>cotiviti-core-license-2</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
