--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.cotiviti</groupId>
   <artifactId>cotiviti-core-license</artifactId>
-  <version>9</version>
+  <version>10-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
   <description>Cotiviti License for Mycila Maven License Plugin - This is the text for the internal license plugin</description>
@@ -38,7 +38,7 @@
     <connection>scm:git:https://github.com/cotiviti/${project.artifactId}</connection>
     <developerConnection>scm:git:git@github.com:cotiviti/${project.artifactId}.git</developerConnection>
     <url>${cotiviti.scm.url}</url>
-    <tag>cotiviti-core-license-9</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
